--- a/src/Views/FormNhanVien.form
+++ b/src/Views/FormNhanVien.form
@@ -329,28 +329,6 @@
                   <Group type="102" alignment="1" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="1" attributes="0">
-                          <Group type="103" alignment="1" groupAlignment="0" attributes="0">
-                              <Component id="btnTrangchu" linkSize="1" alignment="0" min="-2" pref="184" max="-2" attributes="0"/>
-                              <Component id="jSeparator1" linkSize="1" alignment="0" min="-2" pref="184" max="-2" attributes="0"/>
-                              <Group type="103" alignment="0" groupAlignment="0" attributes="0">
-                                  <Group type="103" alignment="1" groupAlignment="0" attributes="0">
-                                      <Component id="btnBanHang" linkSize="1" alignment="0" min="-2" pref="184" max="-2" attributes="0"/>
-                                      <Component id="jSeparator2" linkSize="1" alignment="0" min="-2" pref="184" max="-2" attributes="0"/>
-                                  </Group>
-                                  <Component id="btnHoaDon" linkSize="1" alignment="0" min="-2" pref="184" max="-2" attributes="0"/>
-                                  <Component id="jSeparator3" linkSize="1" alignment="0" min="-2" pref="184" max="-2" attributes="0"/>
-                                  <Component id="btnSanPham" linkSize="1" alignment="0" min="-2" pref="184" max="-2" attributes="0"/>
-                                  <Component id="jSeparator4" linkSize="1" alignment="0" min="-2" pref="184" max="-2" attributes="0"/>
-                                  <Component id="btnKhuyenMai" linkSize="1" alignment="0" min="-2" pref="184" max="-2" attributes="0"/>
-                                  <Component id="jSeparator5" linkSize="1" alignment="0" min="-2" pref="184" max="-2" attributes="0"/>
-                                  <Component id="btnNhanVien" linkSize="1" alignment="0" min="-2" pref="184" max="-2" attributes="0"/>
-                                  <Component id="jSeparator6" linkSize="1" alignment="0" min="-2" pref="184" max="-2" attributes="0"/>
-                              </Group>
-                          </Group>
-                          <Group type="102" alignment="1" attributes="0">
-                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                              <Component id="btnKhachHang" linkSize="1" min="-2" pref="184" max="-2" attributes="0"/>
-                          </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <Group type="103" groupAlignment="1" attributes="0">
                                   <Component id="jSeparator8" alignment="0" min="-2" pref="184" max="-2" attributes="0"/>
@@ -360,6 +338,30 @@
                                   <Component id="jSeparator7" alignment="0" min="-2" pref="184" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                          </Group>
+                          <Group type="102" attributes="0">
+                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                              <Group type="103" groupAlignment="1" attributes="0">
+                                  <Group type="103" alignment="1" groupAlignment="0" attributes="0">
+                                      <Component id="btnTrangchu" linkSize="1" alignment="0" min="-2" pref="184" max="-2" attributes="0"/>
+                                      <Component id="jSeparator1" linkSize="1" alignment="0" min="-2" pref="184" max="-2" attributes="0"/>
+                                      <Group type="103" alignment="0" groupAlignment="0" attributes="0">
+                                          <Group type="103" alignment="1" groupAlignment="0" attributes="0">
+                                              <Component id="btnBanHang" linkSize="1" alignment="0" min="-2" pref="184" max="-2" attributes="0"/>
+                                              <Component id="jSeparator2" linkSize="1" alignment="0" min="-2" pref="184" max="-2" attributes="0"/>
+                                          </Group>
+                                          <Component id="btnHoaDon" linkSize="1" alignment="0" min="-2" pref="184" max="-2" attributes="0"/>
+                                          <Component id="jSeparator3" linkSize="1" alignment="0" min="-2" pref="184" max="-2" attributes="0"/>
+                                          <Component id="btnSanPham" linkSize="1" alignment="0" min="-2" pref="184" max="-2" attributes="0"/>
+                                          <Component id="jSeparator4" linkSize="1" alignment="0" min="-2" pref="184" max="-2" attributes="0"/>
+                                          <Component id="btnKhuyenMai" linkSize="1" alignment="0" min="-2" pref="184" max="-2" attributes="0"/>
+                                          <Component id="jSeparator5" linkSize="1" alignment="0" min="-2" pref="184" max="-2" attributes="0"/>
+                                          <Component id="btnNhanVien" linkSize="1" alignment="0" min="-2" pref="184" max="-2" attributes="0"/>
+                                          <Component id="jSeparator6" linkSize="1" alignment="0" min="-2" pref="184" max="-2" attributes="0"/>
+                                      </Group>
+                                  </Group>
+                                  <Component id="btnKhachHang" linkSize="1" alignment="1" min="-2" pref="184" max="-2" attributes="0"/>
+                              </Group>
                           </Group>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
