--- a/src/Aplication/FormNhanVien.form
+++ b/src/Aplication/FormNhanVien.form
@@ -105,6 +105,11 @@
       </Layout>
       <SubComponents>
         <Container class="javax.swing.JPanel" name="pncardgoc">
+          <Properties>
+            <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+              <Dimension value="[1211, 613]"/>
+            </Property>
+          </Properties>
           <AccessibilityProperties>
             <Property name="AccessibleContext.accessibleName" type="java.lang.String" value=""/>
           </AccessibilityProperties>
