--- a/src/Views/KhachHangJPanel.form
+++ b/src/Views/KhachHangJPanel.form
@@ -310,9 +310,9 @@
                   <Group type="102" alignment="1" attributes="0">
                       <EmptySpace pref="22" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="btnLamMoi" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="btnSua" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="btnThem" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="btnLamMoi" linkSize="1" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="btnSua" linkSize="1" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="btnThem" linkSize="1" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
                   </Group>
@@ -468,7 +468,7 @@
 
                   <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
                   <SubComponents>
-                    <Component class="javax.swing.JTable" name="tblThongTinKH">
+                    <Component class="javax.swing.JTable" name="tblThongtinKH">
                       <Properties>
                         <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                           <Table columnCount="10" rowCount="0">
@@ -488,6 +488,9 @@
                           <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
                         </Property>
                       </Properties>
+                      <Events>
+                        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="tblThongtinKHMouseClicked"/>
+                      </Events>
                     </Component>
                   </SubComponents>
                 </Container>
