--- a/src/Views/ThongTinNhanVien.form
+++ b/src/Views/ThongTinNhanVien.form
@@ -91,13 +91,15 @@
                                   </Group>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="jLabel11" alignment="0" min="-2" pref="265" max="-2" attributes="0"/>
                                       <Component id="jLabel15" alignment="0" min="-2" pref="265" max="-2" attributes="0"/>
-                                      <Component id="jLabel16" alignment="0" min="-2" pref="265" max="-2" attributes="0"/>
-                                      <Component id="jLabel14" alignment="0" min="-2" pref="265" max="-2" attributes="0"/>
                                       <Component id="jLabel19" alignment="0" min="-2" pref="265" max="-2" attributes="0"/>
                                       <Component id="jLabel20" alignment="0" min="-2" pref="265" max="-2" attributes="0"/>
                                       <Component id="jLabel23" alignment="0" min="-2" pref="265" max="-2" attributes="0"/>
+                                      <Component id="txtMANV" alignment="0" min="-2" pref="244" max="-2" attributes="0"/>
+                                      <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
+                                          <Component id="jLabel16" alignment="0" pref="248" max="32767" attributes="0"/>
+                                          <Component id="jLabel14" alignment="0" max="32767" attributes="0"/>
+                                      </Group>
                                   </Group>
                               </Group>
                               <Group type="102" alignment="0" attributes="0">
@@ -115,7 +117,7 @@
                           <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="jLabel11" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="txtMANV" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
@@ -160,7 +162,7 @@
                     <Property name="text" type="java.lang.String" value="M&#xe3; NV"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JLabel" name="jLabel11">
+                <Component class="javax.swing.JLabel" name="txtMANV">
                   <Properties>
                     <Property name="text" type="java.lang.String" value="-"/>
                   </Properties>
@@ -229,6 +231,9 @@
                   <Properties>
                     <Property name="text" type="java.lang.String" value="&#x110;&#x103;ng Xu&#x1ea5;t"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton4ActionPerformed"/>
+                  </Events>
                 </Component>
               </SubComponents>
             </Container>
