--- a/src/Views/ThongTinNhanVien.form
+++ b/src/Views/ThongTinNhanVien.form
@@ -306,12 +306,16 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="jPasswordField1"/>
               </Properties>
+              <Events>
+                <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="txtxacnhanmkmoiFocusGained"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JPasswordField" name="txtmatkhaumoi">
               <Properties>
                 <Property name="text" type="java.lang.String" value="jPasswordField1"/>
               </Properties>
               <Events>
+                <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="txtmatkhaumoiFocusGained"/>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtmatkhaumoiActionPerformed"/>
               </Events>
             </Component>
